crates/mlcg_builtin_macros/tests/ui/fail_output_field_collision.stderr
error: generated output field `arg_type` appears more than once in instruction `multi`
 --> tests/ui/fail_output_field_collision.rs:2:5
  |
2 |     mlcg_builtin_macros::include_manifest!("tests/output_field_collision_manifest.toml");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mlcg_builtin_macros::include_manifest` (in Nightly builds, run with -Z macro-backtrace for more info)
