crates/mlcg_builtin_macros/tests/ui/fail_output_field_collision.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/output_field_collision_manifest.toml");
}

fn main() {}
